<resources>
    <string name="app_name">Click Challenge</string>
    <string name="home_quit_button">Quit</string>
    <string name="home_play_button">Play</string>
    <string name="home_more_button">About</string>

    <string name="select_game_mode">Select Game Mode</string>
    <string name="play_gamemode1">5 seconds</string>
    <string name="play_gamemode2">10 seconds</string>
    <string name="play_gamemode3">30 seconds</string>

    <string name="game_button_text">Press</string>
    <string name="score_format">Current Score: %d</string>

    <string name="after_button_share_text">Share</string>
    <string name="after_congratulations">Congratulations</string>
    <string name="after_textview_score_text">Score</string>
    <string name="after_gameMode_text">Game Mode</string>
    <string name="share_text">I\'ve clicked the button %1$d times in %2$s #ClickChallenge https://play.google.com/store/apps/details?id=com.pawelsznuradev.clickchallenge</string>
    <string name="sharing_not_available">Sharing Not Available</string>


    <string name="about_title">About</string>
    <string name="about_text">Hey! I’m Click Challenge. My creator is Pawel Sznura.
        Maybe I’m not the best game on the market, but I brought Pawel a huge step closer to his android development carrier.
        For more information visit my GitHub page:</string>
    <string name="github_link">https://github.com/pawelsz99/ClickChallenge</string>
    <string name="github">GitHub</string>
    
    <string name="about_button_text">Go back</string>

</resources>
