<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="afterFragment"
            type="com.pawelsznuradev.clickchallange.ui.after.AfterFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/after_button_share"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/after_button_share_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/after_button_play_again"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Play again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/after_button_share" />

        <TextView
            android:id="@+id/after_congratulations"
            style="@style/MyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_congratulations"
            app:layout_constraintBottom_toTopOf="@+id/after_textview_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/after_textview_score"
            style="@style/MyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_textview_score_text"
            app:layout_constraintBottom_toTopOf="@+id/after_gameMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/after_gameMode"
            style="@style/MyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_gameMode_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>